# data-analysis-hws

./: .gitignore
lab-1/: Hist.ipynb  Interpolation.ipynb  Lab-1.ipynb  Plots.ipynb
lab-2/: .gitignore  Lab-2.ipynb  PackageTest.ipynb  Pipfile
lab-2-mlt/: Pipfile  config.yaml
lab-2-mlt/src/: Tesis_1_1_Simple Prediction_by_LSTM.ipynb  Tesis_1_2_Prediction_of_sequences_by_LSTM.ipynb
lab-2-mlt/src/modules/: data_prepare.py  helpers.py  util.py
lab-3/: Pipfile  time-row.ipynb
lab-3/data/: Apple_Historical_StockPrice2.csv  Facebook_Historical_StockPrice2.csv  Google_Historical_StockPrice2.csv  Netflix_Historical_StockPrice2.csv
lab-4/: Lab-4.ipynb  Pipfile  config.yaml  fit-predict-monke.ipynb
lab-5/: Dimension-reduce.ipynb  Lab-5.ipynb  Pipfile
lab-5/cluster_metrics/: Cargo.toml  pyproject.toml
lab-5/cluster_metrics/src/: calcs.rs  helpers.rs  lib.rs
lab-6/: .gitignore  Pipfile  img-embedding.ipynb  lena-filtering.ipynb
lab-6/image_filters/: Cargo.toml  pyproject.toml
lab-6/image_filters/src/: filter.rs  gaussian.rs  lib.rs  pub_utils.rs
